# janitor

./: LICENSE  README.md
cli/: Cargo.toml  README.md
cli/fbank/: Cargo.toml  README.md
cli/fbank/src/: lib.rs
cli/fbank/sys/knfc/: knfc.cc  knfc.h
cli/src/: audio.rs  main.rs  processing.rs
service/: Cargo.toml  README.md  build_model.sh
service/ast/: .gitignore  README.md  create.py  environment.yml  model.py
service/src/: main.rs  model.rs  queue.rs  tensor.rs
