[package]
name = "janitor-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
itertools = "0.13.0"
clap = { version = "4.5.8", features = ["derive"] }
spinoff = "0.8.0"
async-walkdir = "2.0.0"
mime_guess = "2.0.5"
rodio = "0.19.0"
fon = "0.6.0"
knf-rs = { path = "./fbank/" }
byte-slice-cast = "1.2.2"
safetensors = "0.4.4"
reqwest = { version = "0.12.5", features = ["multipart", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
